# serverless-vectorizer

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.variant  README.md  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: build-on-release.yml  test-and-tag.yml  test.yml
src/: lambda.rs  lib.rs  main.rs
src/core/: chunking.rs  clustering.rs  embeddings.rs  image_utils.rs  mod.rs  model.rs  pdf.rs  similarity.rs  types.rs
tests/: integration_image_tests.rs  integration_rerank_tests.rs  integration_sparse_tests.rs  integration_tests.rs  integration_text_tests.rs  unit_tests.rs
