[package]
name = "serverless-vectorizer"
version = "0.1.0"
edition = "2024"

[features]
default = []
pdf = ["dep:pdf-extract", "dep:lopdf"]
aws = ["dep:lambda_runtime", "dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]
full = ["pdf", "aws"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "5"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

# PDF support (optional)
pdf-extract = { version = "0.10", optional = true }
lopdf = { version = "0.38", optional = true }

# AWS/Lambda support (optional)
lambda_runtime = { version = "1", optional = true }
aws-config = { version = "1.0", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }

[lib]
name = "serverless_vectorizer"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
required-features = ["aws"]

[[bin]]
name = "preload"
path = "src/bin/preload.rs"

[[bin]]
name = "embed-cli"
path = "src/bin/cli.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["aws"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"
required-features = ["aws"]
[build-dependencies]


